Some more pages

--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -120,6 +120,10 @@
             </p>
             <!-- Q -->
             <!-- R -->
+            <p class="definition" page="2.08">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
+            </p>
             <!-- S -->
             <p class="definition" page="1.04">
                 <img src="../../icons/book.svg" class="icon" />
