More changes for v2

--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -88,6 +88,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>flowchart</strong> is a diagram that depicts an algorithm. 
             </p>
+            <p class="definition" page="2.10">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>function</strong> is a subroutine which does return a value.
+            </p>
             <!-- G -->
             <!-- H -->
             <!-- I -->
@@ -114,6 +118,10 @@
                 <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
             </p>
             <!-- P -->
+            <p class="definition" page="2.10">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>procedure</strong> is a subroutine which doesn't return a value.
+            </p>
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Pseudo-code</strong> is a way of writing algorithms that reads like code written in actual programming languages. 
@@ -144,6 +152,10 @@
             <p class="definition" page="2.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Strings</strong> are collections of characters.
+            </p>
+            <p class="definition" page="2.10">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>subroutine</strong> is a set of instructions inside an algorithm stored under one name.
             </p>
             <!-- T -->
             <!-- U -->
