--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -47,6 +47,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>array</strong> is a data structure that can store a group of data of the same type under a single identifier.
             </p>
+            <p class="definition" page="2.13">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Authentication</strong> is the process of checking that a particular user is permitted to use a system and, if so, which parts of that system they can use.
+            </p>
             <!-- B -->
             <p class="definition" page="1.05">
                 <img src="../../icons/book.svg" class="icon" />
@@ -83,6 +87,10 @@
                 <strong>Decomposition</strong> is the process of breaking down a complex problem into smaller problems and solving each one individually.
             </p>
             <!-- E -->
+            <p class="definition" page="2.14">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
+            </p>
             <!-- F -->
             <p class="definition" page="1.03">
                 <img src="../../icons/book.svg" class="icon" />
@@ -93,6 +101,10 @@
                 A <strong>function</strong> is a subroutine which does return a value.
             </p>
             <!-- G -->
+            <p class="definition" page="2.11">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Global variables</strong> have a global scope: they can be used anywhere.
+            </p>
             <!-- H -->
             <!-- I -->
             <p class="definition" page="1.02">
@@ -105,6 +117,14 @@
             <p class="definition" page="1.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Linear search</strong> is a searching algorithm which checks each item in order.
+            </p>
+            <p class="definition" page="2.11">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Local variables</strong> have a local scope: they can only be used inside the structure they're defined in.
+            </p>
+            <p class="definition" page="2.14">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Logic errors</strong> occur when the program does something unexpected.
             </p>
             <!-- M -->
             <p class="definition" page="1.08">
@@ -133,6 +153,10 @@
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
             </p>
             <!-- S -->
+            <p class="definition" page="2.11">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>scope</strong> of a variable tells you which parts of the program it can be used in.
+            </p>
             <p class="definition" page="1.04">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>searching algorithm</strong> is an algorithm to find the index of an item in a list.
@@ -153,13 +177,37 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Strings</strong> are collections of characters.
             </p>
+            <p class="definition" page="2.12">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Structured programming</strong> involves decomposing the program into manageable modules.
+            </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>subroutine</strong> is a set of instructions inside an algorithm stored under one name.
             </p>
+            <p class="definition" page="2.14">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Syntax errors</strong> occur when the code doesn't follow the rules (syntax) of the programming language.
+            </p>
             <!-- T -->
+            <p class="definition" page="2.15">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Testing</strong> a program means giving it some example inputs to make sure that there are no logic errors.
+            </p>
+            <p class="definition" page="2.15">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>test plan</strong> should outline exactly what will be tested.
+            </p>
+            <p class="definition" page="2.17">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Translators</strong> are a type of software which translate (convert) code into machine code that the computer can run.
+            </p>
             <!-- U -->
             <!-- V -->
+            <p class="definition" page="2.13">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Validating</strong> inputs prevents the user from accidentally or intentionally misusing a program.
+            </p>
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Variables</strong> are named references to locations in memory for temporarily storing data while a program is running.
