Start making Section 3

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -43,6 +43,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Algorithmic thinking</strong> means taking logical steps to get from the problem to the solution.
             </p>
+            <p class="definition" page="3.05">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>American Standard Code for Information Interchange</strong> (ASCII) is a character set which uses 7 bits to encode each character.
+            </p>
             <p class="definition" page="2.05">
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>array</strong> is a data structure that can store a group of data of the same type under a single identifier.
@@ -52,6 +56,18 @@
                 <strong>Authentication</strong> is the process of checking that a particular user is permitted to use a system and, if so, which parts of that system they can use.
             </p>
             <!-- B -->
+            <p class="definition" page="3.04">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>binary left-shift</strong> is equivalent to adding 0s on the end of a binary number.
+            </p>
+            <p class="definition" page="3.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>binary number system</strong> is a way of writing numbers with only 1s and 0s.
+            </p>
+            <p class="definition" page="3.04">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>binary right-shift</strong> is equivalent to taking away digits from the end of a binary number.
+            </p>
             <p class="definition" page="1.05">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Binary search</strong> is a more efficient searching algorithm which only works on sorted lists.
@@ -61,6 +77,14 @@
                 <strong>Bubble sort</strong> is a simple sorting algorithm.
             </p>
             <!-- C -->
+            <p class="definition" page="3.05">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>character set</strong> is a collection of characters that a computer can recognise from their binary representation.
+            </p>
+            <p class="definition" page="3.06">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>colour depth</strong> of an image is the number of bits used to store the colour of each pixel.
+            </p>
             <p class="definition" page="1.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Computational thinking</strong> is all about the steps you take to find the best solution to a complex problem.
@@ -92,6 +116,10 @@
                 <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
             </p>
             <!-- F -->
+            <p class="definition" page="3.06">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>file size</strong> of an image is the total number of bits needed to store the image.
+            </p>
             <p class="definition" page="1.03">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>flowchart</strong> is a diagram that depicts an algorithm. 
@@ -106,6 +134,10 @@
                 <strong>Global variables</strong> have a global scope: they can be used anywhere.
             </p>
             <!-- H -->
+            <p class="definition" page="3.02">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>hexadecimal number system</strong> (also called base-16) is a way of writing numbers using 16 different digits.
+            </p>
             <!-- I -->
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -137,7 +169,15 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
             </p>
+            <p class="definition" page="3.03">
+                <img src="../../icons/book.svg" class="icon" />
+                An <strong>overflow</strong> occurs when a number is too big to fit in a set amount of space.
+            </p>
             <!-- P -->
+            <p class="definition" page="3.06">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>pixel</strong> is a single coloured point.
+            </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>procedure</strong> is a subroutine which doesn't return a value.
@@ -185,6 +225,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>subroutine</strong> is a set of instructions inside an algorithm stored under one name.
             </p>
+            <p class="definition" page="3.02">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Subscript notation</strong> is a way of writing the base a number has been represented in so that we don't get confused.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Syntax errors</strong> occur when the code doesn't follow the rules (syntax) of the programming language.
@@ -203,6 +247,10 @@
                 <strong>Translators</strong> are a type of software which translate (convert) code into machine code that the computer can run.
             </p>
             <!-- U -->
+            <p class="definition" page="3.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Unicode</strong> is a different character set which uses multiple bytes for each character.
+            </p>
             <!-- V -->
             <p class="definition" page="2.13">
                 <img src="../../icons/book.svg" class="icon" />
