--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="See every book definition from every page on CS.RN v2.">
+        <meta name="description" content="See every book definition from every page on CS.RN v2, the best place to revise for the Computer Science exams.">
     </head>
 
     <body>
@@ -46,6 +46,10 @@
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>American Standard Code for Information Interchange</strong> (ASCII) is a character set which uses 7 bits to encode each character.
+            </p>
+            <p class="definition" page="3.07">
+                <img src="../../icons/book.svg" class="icon" />
+                An <strong>analogue to digital converter</strong> (ADC) is used in a microphone to convert the analogue sound wave into a digital stream of binary numbers.
             </p>
             <p class="definition" page="2.05">
                 <img src="../../icons/book.svg" class="icon" />
@@ -84,6 +88,10 @@
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>colour depth</strong> of an image is the number of bits used to store the colour of each pixel.
+            </p>
+            <p class="definition" page="3.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Compression</strong> means reducing the file size, while trying to keep the compressed file as close to the original file as possible.
             </p>
             <p class="definition" page="1.01">
                 <img src="../../icons/book.svg" class="icon" />
@@ -193,6 +201,14 @@
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
             </p>
             <!-- S -->
+            <p class="definition" page="3.07">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>sample rate</strong> of an audio file is the number of samples every second.
+            </p>
+            <p class="definition" page="3.07">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>sample resolution</strong> of an audio file is the number of bits used to store each sample.
+            </p>
             <p class="definition" page="2.11">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>scope</strong> of a variable tells you which parts of the program it can be used in.
