--- a/v2/3/06/index.html
+++ b/v2/3/06/index.html
@@ -79,6 +79,7 @@
         <script src="../../scripts/version.js"></script>
         <script src="../../scripts/footer.js"></script>
         <script src="../../scripts/pages.js"></script>
+        <script src="./main.js"></script>
 
     </body>
 </html>
