--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -146,6 +146,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>hexadecimal number system</strong> (also called base-16) is a way of writing numbers using 16 different digits.
             </p>
+            <p class="definition" page="3.10">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Huffman Coding</strong> is a form of lossless data compression which can be used on text files.
+            </p>
             <!-- I -->
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -199,6 +203,10 @@
             <p class="definition" page="2.08">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
+            </p>
+            <p class="definition" page="3.09">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Run-Length Encoding</strong> (RLE) is a form of lossless compression where "runs" (groups) of consecutive data which have the same value are grouped together in length/data pairs.
             </p>
             <!-- S -->
             <p class="definition" page="3.07">
