--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -51,6 +51,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>analogue to digital converter</strong> (ADC) is used in a microphone to convert the analogue sound wave into a digital stream of binary numbers.
             </p>
+            <p class="definition" page="4.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>AND gate</strong> receives two boolean inputs and checks if both of them are true.
+            </p>
             <p class="definition" page="2.05">
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>array</strong> is a data structure that can store a group of data of the same type under a single identifier.
@@ -170,16 +174,28 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Logic errors</strong> occur when the program does something unexpected.
             </p>
+            <p class="definition" page="4.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Logic gates</strong> are special circuits built into computer chips.
+            </p>
             <!-- M -->
             <p class="definition" page="1.08">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
             </p>
             <!-- N -->
+            <p class="definition" page="4.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>NOT gate</strong> receives one boolean input and outputs its opposite.
+            </p>
             <!-- O -->
             <p class="definition" page="2.03">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
+            </p>
+            <p class="definition" page="4.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>OR gate</strong> receives two boolean inputs and checks if either one of them is true.
             </p>
             <p class="definition" page="3.03">
                 <img src="../../icons/book.svg" class="icon" />
@@ -270,6 +286,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Translators</strong> are a type of software which translate (convert) code into machine code that the computer can run.
             </p>
+            <p class="definition" page="4.02">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Truth tables</strong> show the output of every possible input combination to a boolean expression.
+            </p>
             <!-- U -->
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
@@ -286,6 +306,10 @@
             </p>
             <!-- W -->
             <!-- X -->
+            <p class="definition" page="4.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>XOR gate</strong> (exclusive OR) receives two boolean inputs and checks if exactly one of them is true.
+            </p>
             <!-- Y -->
             <!-- Z -->
 
