--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -170,6 +170,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Local variables</strong> have a local scope: they can only be used inside the structure they're defined in.
             </p>
+            <p class="definition" page="4.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Logic diagrams</strong> are often drawn to represent boolean expressions.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Logic errors</strong> occur when the program does something unexpected.
@@ -177,6 +181,10 @@
             <p class="definition" page="4.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Logic gates</strong> are special circuits built into computer chips.
+            </p>
+            <p class="definition" page="4.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Logic symbols</strong> can also be used to represent boolean expressions.
             </p>
             <!-- M -->
             <p class="definition" page="1.08">
