Create another page

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -55,6 +55,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>AND gate</strong> receives two boolean inputs and checks if both of them are true.
             </p>
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Application software</strong> means programs which perform end-user tasks.
+            </p>
             <p class="definition" page="2.05">
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>array</strong> is a data structure that can store a group of data of the same type under a single identifier.
@@ -123,6 +127,10 @@
                 <strong>Decomposition</strong> is the process of breaking down a complex problem into smaller problems and solving each one individually.
             </p>
             <!-- E -->
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                An <strong>embedded system</strong> is a computer system which is built into another device to perform a specific task.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
@@ -141,11 +149,19 @@
                 A <strong>function</strong> is a subroutine which does return a value.
             </p>
             <!-- G -->
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>general purpose system</strong> is a computer system which can perform many tasks and has replaceable software.
+            </p>
             <p class="definition" page="2.11">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Global variables</strong> have a global scope: they can be used anywhere.
             </p>
             <!-- H -->
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Hardware</strong> is the physical components of a computer system.
+            </p>
             <p class="definition" page="3.02">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>hexadecimal number system</strong> (also called base-16) is a way of writing numbers using 16 different digits.
@@ -257,6 +273,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Sequence</strong> is just a matter of writing of writing down the steps in the correct order.
             </p>
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Software</strong> refers to the programs or instructions that control a computer's hardware.
+            </p>
             <p class="definition" page="1.07">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>sorting algorithm</strong> is an algorithm to put the items of a list in order.
@@ -280,6 +300,10 @@
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Syntax errors</strong> occur when the code doesn't follow the rules (syntax) of the programming language.
+            </p>
+            <p class="definition" page="4.06">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>System software</strong> means programs which are needed for the computer to function.
             </p>
             <!-- T -->
             <p class="definition" page="2.15">
