--- a/v2/4/05/index.html
+++ b/v2/4/05/index.html
@@ -85,7 +85,7 @@
         </div>
         <div id="footer"></div>
 
-        <script>let v1 = "X-XX-TITLE/";</script>
+        <script>let v1 = "4-05-Logic-Symbols/";</script>
         <script src="../../scripts/version.js"></script>
         <script src="../../scripts/footer.js"></script>
         <script src="../../scripts/pages.js"></script>
