--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -213,6 +213,10 @@
                 The <strong>NOT gate</strong> receives one boolean input and outputs its opposite.
             </p>
             <!-- O -->
+            <p class="definition" page="4.07">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Operating System</strong> (OS) is a complex piece of system software found on general-purpose computer systems.
+            </p>
             <p class="definition" page="2.03">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
