--- a/v2/4/06/index.html
+++ b/v2/4/06/index.html
@@ -95,10 +95,11 @@
         </div>
         <div id="footer"></div>
 
-        <script>let v1 = "X-XX-TITLE/";</script>
+        <script>let v1 = "4-06-Hardware-and-Software/";</script>
         <script src="../../scripts/version.js"></script>
         <script src="../../scripts/footer.js"></script>
         <script src="../../scripts/pages.js"></script>
+        <script src="./main.js"></script>
 
     </body>
 </html>
