Another page and some more themes

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -68,6 +68,10 @@
                 <strong>Authentication</strong> is the process of checking that a particular user is permitted to use a system and, if so, which parts of that system they can use.
             </p>
             <!-- B -->
+            <p class="definition" page="4.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Backup</strong> software allows the user to schedule backups for their files.
+            </p>
             <p class="definition" page="3.04">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>binary left-shift</strong> is equivalent to adding 0s on the end of a binary number.
@@ -101,6 +105,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Compression</strong> means reducing the file size, while trying to keep the compressed file as close to the original file as possible.
             </p>
+            <p class="definition" page="4.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Compression</strong> utilities apply a form of lossless compression to a file's binary data.
+            </p>
             <p class="definition" page="1.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Computational thinking</strong> is all about the steps you take to find the best solution to a complex problem.
@@ -126,10 +134,18 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Decomposition</strong> is the process of breaking down a complex problem into smaller problems and solving each one individually.
             </p>
+            <p class="definition" page="4.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Defragmentation</strong> utility programs reorganise the data stored on a hard disk drive (HDD).
+            </p>
             <!-- E -->
             <p class="definition" page="4.06">
                 <img src="../../icons/book.svg" class="icon" />
                 An <strong>embedded system</strong> is a computer system which is built into another device to perform a specific task.
+            </p>
+            <p class="definition" page="4.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Encryption</strong> utilities scramble data to prevent unauthorised access.
             </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
@@ -330,6 +346,10 @@
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Unicode</strong> is a different character set which uses multiple bytes for each character.
+            </p>
+            <p class="definition" page="4.08">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Utility software</strong> is a category of system software used to describe programs that maintain a computer.
             </p>
             <!-- V -->
             <p class="definition" page="2.13">
