--- a/404.html
+++ b/404.html
@@ -2,33 +2,33 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/v1/main.css">
-        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="/v2/main.css">
 
-        <title>404 | Computer Science Revision</title>
+        <title>Page Not Found | CS.RN v2</title>
 
-        <link rel="icon" type="image/png" href="/v1/icons/logo.svg"/>
-        <meta property="og:image" content="/v1/icons/logo.png" />
-        <meta property="og:image:width" content="640" />
-        <meta property="og:image:height" content="512" />
+        <link rel="icon" type="image/png" href="/v2/logos/square.png"/>
+        <meta property="og:image" content="/v2/logos/square.png" />
+        <meta property="og:image:width" content="880" />
+        <meta property="og:image:height" content="880" />
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Computer Science Revision is an online, mobile-friendly revision guide for GCSE Computer Science students.">
+        <meta name="description" content="Page not found.">
     </head>
 
     <body>
-        <h1 id="heading">Trying to redirect...</h1>
 
-        <p id="text" hidden>Click <a href="/">here</a> to go to the homepage.</p>
-        
-        <br />
-        <br />
+        <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
+        <div id="content" class="error-404">
+            <h1 id="error-404-heading">Error 404.</h1>
+            <h2 id="error-404-subtitle">The page you're looking for doesn't exist.</h2>
+            <h3 id="error-404-text">Would you like to learn more about errors <a href="/v2/2/14/">on page 2.14</a>?</h3>
+        </div>
 
-        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
-        <script src="/year.js"></script>
+        <script>let v1 = null;</script>
+        <script src="/v2/scripts/version.js"></script>
+        <script src="/v2/scripts/footer.js"></script>
 
-        <script src="/404.js"></script>
     </body>
 </html>
