--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -93,6 +93,10 @@
                 <strong>Bubble sort</strong> is a simple sorting algorithm.
             </p>
             <!-- C -->
+            <p class="definition" page="4.09">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Central Processing Unit</strong> (CPU) processes all of the data and instructions that make the computer system work.
+            </p>
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>character set</strong> is a collection of characters that a computer can recognise from their binary representation.
@@ -152,13 +156,17 @@
                 <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
             </p>
             <!-- F -->
+            <p class="definition" page="4.10">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Fetch-Execute Cycle</strong> (sometimes called the Fetch-Decode-Execute Cycle) describes how a CPU carries out instructions.
+            </p>
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>file size</strong> of an image is the total number of bits needed to store the image.
             </p>
             <p class="definition" page="1.03">
                 <img src="../../icons/book.svg" class="icon" />
-                A <strong>flowchart</strong> is a diagram that depicts an algorithm. 
+                A <strong>flowchart</strong> is a diagram that depicts an algorithm.
             </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
@@ -256,7 +264,7 @@
             </p>
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
-                <strong>Pseudo-code</strong> is a way of writing algorithms that reads like code written in actual programming languages. 
+                <strong>Pseudo-code</strong> is a way of writing algorithms that reads like code written in actual programming languages.
             </p>
             <!-- Q -->
             <!-- R -->
