--- a/v2/4/10/index.html
+++ b/v2/4/10/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="DESCRIPTION">
+        <meta name="description" content="Learn about how the CPU actually works by studying the Fetch-Decode-Execute cycle for your GCSE Computer Science exam on CS.RN v2.">
     </head>
 
     <body>
@@ -70,7 +70,11 @@
             </p>
     
             <p class="summary-question">
-                <span class="answer"></span>
+                <span class="answer">
+                    If the clock speed is higher, the Fetch-Execute Cycle takes less time and therefore the CPU performs
+                    better. However, increasing the clock speed above the recommended level is called "overclocking" -
+                    which could be dangerous for your computer.
+                </span>
             </p>
 
             <hr />
