--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -93,6 +93,10 @@
                 <strong>Bubble sort</strong> is a simple sorting algorithm.
             </p>
             <!-- C -->
+            <p class="definition" page="4.11">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Cache</strong> memory is very fast memory located within the CPU.
+            </p>
             <p class="definition" page="4.09">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>Central Processing Unit</strong> (CPU) processes all of the data and instructions that make the computer system work.
@@ -100,6 +104,10 @@
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>character set</strong> is a collection of characters that a computer can recognise from their binary representation.
+            </p>
+            <p class="definition" page="4.11">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>clock speed</strong> of a CPU is the number of pulses sent out by the clock every second.
             </p>
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
@@ -120,6 +128,10 @@
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>constant</strong> is a special type of variable whose value does not change as the program runs.
+            </p>
+            <p class="definition" page="4.11">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>CPU cores</strong> have their own CU, ALU and cache.
             </p>
             <!-- D -->
             <p class="definition" page="2.05">
