--- a/v2/index.html
+++ b/v2/index.html
@@ -81,73 +81,73 @@
                 <div class="section-flexbox disabled">
                     <a href="./9/" class="no-underline section-link">
                         <h1>Section 9</h1>
-                        <p>Programming <em>(in progress)</em></p>
+                        <p>Programming <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./10/" class="no-underline section-link">
                         <h1>Section 10</h1>
-                        <p>Problem Solving <em>(in progress)</em></p>
+                        <p>Problem Solving <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./11/" class="no-underline section-link">
                         <h1>Section 11</h1>
-                        <p>Data Representation <em>(in progress)</em></p>
+                        <p>Data Representation <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./12/" class="no-underline section-link">
                         <h1>Section 12</h1>
-                        <p>Hardware and Software <em>(in progress)</em></p>
+                        <p>Hardware and Software <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./13/" class="no-underline section-link">
                         <h1>Section 13</h1>
-                        <p>Computer Architecture <em>(in progress)</em></p>
+                        <p>Computer Architecture <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./14/" class="no-underline section-link">
                         <h1>Section 14</h1>
-                        <p>Communication <em>(in progress)</em></p>
+                        <p>Communication <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./15/" class="no-underline section-link">
                         <h1>Section 15</h1>
-                        <p>Data Structures <em>(in progress)</em></p>
+                        <p>Data Structures <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./16/" class="no-underline section-link">
                         <h1>Section 16</h1>
-                        <p>Algorithms <em>(in progress)</em></p>
+                        <p>Algorithms <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./17/" class="no-underline section-link">
                         <h1>Section 17</h1>
-                        <p>Regular Languages <em>(in progress)</em></p>
+                        <p>Regular Languages <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
-                        <p>The Internet <em>(in progress)</em></p>
+                        <p>The Internet <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./19/" class="no-underline section-link">
                         <h1>Section 19</h1>
-                        <p>Databases <em>(in progress)</em></p>
+                        <p>Databases <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./20/" class="no-underline section-link">
                         <h1>Section 20</h1>
-                        <p>Object-Oriented Programming <em>(in progress)</em></p>
+                        <p>Object-Oriented Programming <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
             </div>
