--- a/v2/index.html
+++ b/v2/index.html
@@ -24,49 +24,49 @@
 
             <p class="centred"><strong><i>Sections 1 to 8 are for GCSE.</i></strong></p>
             <div class="section-flex">
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./1/" class="no-underline section-link">
                         <h1>Section 1</h1>
                         <p>Algorithms</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./2/" class="no-underline section-link">
                         <h1>Section 2</h1>
                         <p>Programming</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./3/" class="no-underline section-link">
                         <h1>Section 3</h1>
                         <p>Data Representation</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./4/" class="no-underline section-link">
                         <h1>Section 4</h1>
                         <p>Computer Systems</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./5/" class="no-underline section-link">
                         <h1>Section 5</h1>
                         <p>Computer Networks</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./6/" class="no-underline section-link">
                         <h1>Section 6</h1>
                         <p>Cyber Security</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./7/" class="no-underline section-link">
                         <h1>Section 7</h1>
                         <p>Structured Query Language</p>
                     </a>
                 </div>
-                <div class="section-flexbox">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./8/" class="no-underline section-link">
                         <h1>Section 8</h1>
                         <p>Impacts of Computing</p>
@@ -78,73 +78,73 @@
 
             <p class="centred"><strong><i>Sections 9 to 20 are for A Level.</i></strong></p>
             <div class="section-flex">
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./9/" class="no-underline section-link">
                         <h1>Section 9</h1>
                         <p>Programming <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./10/" class="no-underline section-link">
                         <h1>Section 10</h1>
                         <p>Problem Solving <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./11/" class="no-underline section-link">
                         <h1>Section 11</h1>
                         <p>Data Representation <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./12/" class="no-underline section-link">
                         <h1>Section 12</h1>
                         <p>Hardware and Software <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./13/" class="no-underline section-link">
                         <h1>Section 13</h1>
                         <p>Computer Architecture <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./14/" class="no-underline section-link">
                         <h1>Section 14</h1>
                         <p>Communication <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./15/" class="no-underline section-link">
                         <h1>Section 15</h1>
                         <p>Data Structures <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./16/" class="no-underline section-link">
                         <h1>Section 16</h1>
                         <p>Algorithms <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./17/" class="no-underline section-link">
                         <h1>Section 17</h1>
                         <p>Regular Languages <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
                         <p>The Internet <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./19/" class="no-underline section-link">
                         <h1>Section 19</h1>
                         <p>Databases <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./20/" class="no-underline section-link">
                         <h1>Section 20</h1>
                         <p>Object-Oriented Programming <br /> <em>(in progress)</em></p>
